# django-user-profile

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  playbook-dcompose.yml  playbook.yml  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
profiles/: __init__.py  admin.py  models.py  signals.py  tests.py
profiles/api/: permissions.py  serializers.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_alter_profilestatus_options.py  0003_profile_address_profile_gender_profile_phone_and_more.py
project/: settings.py  urls.py
